# namespaced.crates.example

./: CNAME  README.md
example-lib/: Cargo.toml
example-lib/.cargo/: config
example-lib2/: Cargo.toml
example-lib2/.cargo/: config
serde/crates/: serde-1.0.99.crate  serde_derive-1.0.99.crate
serde/info/: refs
serde/refs/heads/: master
uuid/crates/: uuid-0.7.4.crate
uuid/refs/heads/: master
