[package]
name = "example-lib"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", registry = "serde-example" }
uuid = { version = "0.7.4", registry = "uuid-example" }
